Plant/group columns no longer collapse
No scenario where closing these makes sense, almost always closed by accident, could be confusing to end users. Expand animation also looks weird when lots of cards exist (>50). Originally this was a navigation feature for the mobile overview (collapse PlantsCol to jump to Groups), but this is now handled with a more intuitive dropdown in the navbar title.

New SectionCol has identical appearance but can't be closed.

--- a/src/main.css
+++ b/src/main.css
@@ -10,14 +10,16 @@
     @apply p-4;
 }
 
-.collapse-title {
-    @apply p-4;
+.section {
+    @apply flex flex-col w-full max-w-96 bg-base-200 px-4 rounded-2xl;
 }
 
-/* Allow overflow when collapse is open */
-/* Prevents FilterColumn sort dropdown getting cut off when only 1 item */
-.collapse:has(> input[type="checkbox"]:checked) {
-    @apply overflow-visible;
+.section-title {
+    @apply text-xl font-medium text-center w-full p-4;
+}
+
+.section-content {
+    @apply min-w-0 min-h-fit px-2 md:px-4 pb-2 md:pb-4;
 }
 
 /* Prevent PlantCard and GroupCard from expanding when focused */
